Push leftover files