@@ -100,7 +100,7 @@ public enum AOPMode {
     @Nonnull
     public List<Path> fsFilesToCopy() {
         return getCopyFSConfigurationEntries().stream()
-                .map(entry -> entry.getFirst().split("/"))
+                .map(entry -> entry.get(0).split("/"))
                 .map(FileTools::resolveFileOnSourceDirectory)
                 .toList();
     }
@@ -108,7 +108,7 @@ public enum AOPMode {
     @Nonnull
     public List<Path> nonFSFilesToCopy() {
         return getCopyNonFSConfigurationEntries().stream()
-                .map(entry -> entry.getFirst().split("/"))
+                .map(entry -> entry.get(0).split("/"))
                 .map(FileTools::resolveFileOnSourceDirectory)
                 .toList();
     }
@@ -178,9 +178,9 @@ public enum AOPMode {
     @Nonnull
     public Path threePartedFileHeader() {
         return getEditConfigurationEntries().stream()
-                .map(entry -> entry.getFirst().split("/"))
+                .map(entry -> entry.get(0).split("/"))
                 .map(FileTools::resolveFileOnSourceDirectory)
-                .toList().getFirst();
+                .toList().get(0);
     }
 
     /**
@@ -252,7 +252,7 @@ public enum AOPMode {
         return getEditConfigurationEntries().stream()
                 .map(entry -> entry.get(1).split("/"))
                 .map(FileTools::resolveFileOnSourceDirectory)
-                .toList().getFirst();
+                .toList().get(0);
     }
 
     /**
@@ -284,7 +284,7 @@ public enum AOPMode {
         return getEditConfigurationEntries().stream()
                 .map(entry -> entry.get(2).split("/"))
                 .map(path -> FileTools.resolveFileOnTargetDirectory(targetPath, path))
-                .toList().getFirst();
+                .toList().get(0);
     }
     //</editor-fold>
 
