@@ -78,7 +78,7 @@ public enum ArchitectureMode {
     @Nonnull
     public List<Path> fsFilesToCopy() {
         return getCopyFSConfigurationEntries().stream()
-                .map(entry -> entry.getFirst().split("/"))
+                .map(entry -> entry.get(0).split("/"))
                 .map(FileTools::resolveFileOnSourceDirectory)
                 .toList();
     }
@@ -86,7 +86,7 @@ public enum ArchitectureMode {
     @Nonnull
     public List<Path> nonFSFilesToCopy() {
         return getCopyNonFSConfigurationEntries().stream()
-                .map(entry -> entry.getFirst().split("/"))
+                .map(entry -> entry.get(0).split("/"))
                 .map(FileTools::resolveFileOnSourceDirectory)
                 .toList();
     }
@@ -156,9 +156,9 @@ public enum ArchitectureMode {
     @Nonnull
     public Path threePartedFileHeader() {
         return getEditConfigurationEntries().stream()
-                .map(entry -> entry.getFirst().split("/"))
+                .map(entry -> entry.get(0).split("/"))
                 .map(FileTools::resolveFileOnSourceDirectory)
-                .toList().getFirst();
+                .toList().get(0);
     }
 
     /**
@@ -199,7 +199,7 @@ public enum ArchitectureMode {
         return getEditConfigurationEntries().stream()
                 .map(entry -> entry.get(1).split("/"))
                 .map(FileTools::resolveFileOnSourceDirectory)
-                .toList().getFirst();
+                .toList().get(0);
     }
 
     /**
@@ -231,7 +231,7 @@ public enum ArchitectureMode {
         return getEditConfigurationEntries().stream()
                 .map(entry -> entry.get(2).split("/"))
                 .map(path -> FileTools.resolveFileOnTargetDirectory(targetPath, path))
-                .toList().getFirst();
+                .toList().get(0);
     }
     //</editor-fold>
 
