@@ -16,7 +16,7 @@ public class ReadFileSystemProviderMain {
      * @return The content of the trusted file
      */
     public static String accessFileSystemViaFileSystemProvider() throws IOException {
-        FileSystemProvider provider = FileSystemProvider.installedProviders().getFirst();
+        FileSystemProvider provider = FileSystemProvider.installedProviders().get(0);
         try (InputStream is = provider.newInputStream(Path.of("src/test/java/de/tum/cit/ase/ares/integration/aop/allowed/subject/trusted.txt"))) {
             byte[] data = is.readAllBytes();
             return new String(data);
