@@ -16,7 +16,7 @@ public class DeleteThroughFileSystemProvider {
      * Access the file system using the {@link FileSystemProvider} class for deletion.
      */
     public static void accessFileSystemViaFileSystemProvider() throws IOException {
-        FileSystemProvider provider = FileSystemProvider.installedProviders().getFirst();
+        FileSystemProvider provider = FileSystemProvider.installedProviders().get(0);
         provider.delete(Path.of(NOT_TRUSTED_FILE));
     }
 }
